# boupplik

00Marhal/: CMakeLists.txt
00Marhal/00Marhal/: Chebyshev.cpp  (+8 more)
01Marhal/: CMakeLists.txt
03Marhal/: CMakeLists.txt
04Debug/: CMakeLists.txt  agm.cpp  agm.h  main.cpp
04Marhal/: CMakeLists.txt  agm.cpp  agm.h  main.cpp
05Marhal/: CMakeLists.txt  main.cpp  polynomial.cpp  polynomial.h
06Marhal/: CMakeLists.txt
07Marhal/: CMakeLists.txt  practice.cpp
08Marhal/: CMakeLists.txt  fibonacci_rec.cpp  ficonacci_rec.h  main.cpp  matrix.cpp  power_rec.cpp  power_rec.h  structures.h  test.h
08Practice/: CMakeLists.txt  Char.cpp  Char.h  main.cpp
11Marhal/: CMakeLists.txt  constants.h  functions.cpp  functions.h  main.cpp  test.h  tester.cpp
BrainFuck/: Brainfuck.cpp  Brainfuck.h  CMakeLists.txt  main.cpp  programs_bf.h
KONTROLNA/: CMakeLists.txt  functions.h  main.cpp  matrix.cpp
KR/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
KR_Marhal/: CMakeLists.txt  assignment_1-5.cpp  assignment_1-5.h  assignment_6-8.cpp  assignment_6-8.h  assignment_9-10.cpp  assignment_9-10.h  functions.cpp  functions.h  main.cpp  structures.h  test.cpp  test.h
Lab4 Marhal/: CMakeLists.txt  agm.h  main.cpp  practice.cpp  practice.h
PRACTICES/: CMakeLists.txt  complex_matrix.cpp  complex_matrix.h  comtrx.cpp  main.cpp  practice.cpp  practice.h  week7.cpp
Practice02/: CMakeLists.txt
Practice10/: CMakeLists.txt  Parameters.cpp  Parameters.h  main.cpp  point.cpp  points.h
Practice6Marhal/: CMakeLists.txt  digits.h  divide.cpp  gcd.cpp  gcd.h  mcomplex.cpp  mcomplex.h
(+26 files in other folders)
